[tool.poetry]
name = "file-integrity"
version = "0.1.0"
description = ""
authors = ["Alexander Alarcon <walarcon14@gmail.com>"]
readme = "README.md"
packages = [{include = "file_integrity"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
